<resources>
    <string name="app_name">Easy CST</string>

    <string name="submit">Submit</string>
    <string name="problem">Please describe your problem here.........</string>
    <string name="full_name">Full Name</string>
    <string name="user_id">User ID</string>
    <string name="new_password">Password</string>
    <string name="register">Register</string>

    <!--Maintenance Registration lable Resource-->


    <!-- Main Content Label Resources -->

    <string name="maintenance">Maintenance</string>
    <string name="football">Assignment</string>
    <string name="timetable">Timetable</string>
    <string name="attendance">Attendance</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="help">Help</string>

    <!--Time Table and HomeWork Strings -->
    <string name="action_settings">Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="selected">Selected</string>

    <!-- Main Activity strings -->
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Module</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="delete">Delete</string>

    <string name="add_subject">Add Module</string>
    <string name="edit_subject">Edit Module</string>
    <string name="teacher">Tutor</string>
    <string name="room">Class</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Homeworks Activity strings -->
    <string name="select_date">Select date</string>
    <string name="desctiption">Description</string>
    <string name="edit_homework">Edit Assignment</string>
    <string name="add_homework">Add Assignment</string>
    <string name="deadline_snackbar">"Deadline field can not be empty!</string>
    <string name="date">Date</string>

    <!-- Settings Activity strings -->
    <string name="sevendays_setting">Enable 7 Days of the Week</string>
    <string name="module">Module</string>
    <string name="tutor">Tutor</string>
    <string name="time_from">From</string>
    <string name="time_to">Till</string>
    <string name="classr">Class Room</string>
    <string name="help_maintenance">This allows you to register for maintenance of your room. Provide your number along with description of problem you are facing and your phone number for MC to call if any clarification needed.</string>
    <string name="help_timetable">This feature allows you to easily record your class timetable for every day use. Fill all required text boxes and set from and till time. You can edit it later if you have any changes.</string>
    <string name="help_attendance">This feature allows you to track your own attendance. First you have to enter all the modules that you have and whenever you miss a class you can just need increase the count by pressing "\+"\ button.</string>
    <string name="help_assignment">Assignment allows you to record and track all assignments and home works that you have</string>
    <string name="help_feedback">Feedback allows you to provide completely anonymous feedback and any suggestions to the college.</string>
    <string name="description_about">Easy CST is a platform for students to have easy access to various services such as registration for maintenance, self attendance tracking, timetable viewing, assignment tracking and providing feedback to the college</string>


    <!--Time Table and HomeWork Strings -->

</resources>
