<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#FFFFFF"
    tools:context=".Help">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="Maintenance" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/h1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/help_maintenance" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="Time Table" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/h2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/help_timetable" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="Attendance" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/h3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/help_attendance" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="Assignment" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/h4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/help_assignment" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="Feedback" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/aboutapp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/help_feedback" />

    </LinearLayout>
</ScrollView>